fix: Prevent double-submit and fix invalid Tailwind class
  - Add mutation.isPending guard in handleSubmit to prevent double submission
  - Add disabled={mutation.isPending} to submit button
  - Fix invalid border-3 class to border-4 (valid Tailwind utility)

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -65,6 +65,8 @@
     "preview": "Preview",
     "searching": "Searching...",
     "createAndStock": "Create & Stock",
+    "pleaseWait": "Please wait...",
+    "nameRequired": "Product name is required",
     "cancel": "Cancel",
     "saveChanges": "Save Changes",
     "insufficientStock": "Insufficient Stock",
@@ -232,7 +234,8 @@
     "productNotFound": "Product not found. Please add it to inventory first.",
     "networkError": "Network error. Check your connection and try again.",
     "authError": "Authentication failed. Check API credentials.",
-    "validationError": "Cannot reduce stock below zero. Adjust quantity and retry.",
+    "validationError": "Validation Error",
+    "stockValidationError": "Cannot reduce stock below zero. Adjust quantity and retry.",
     "authorizationError": "Authorization failed. Contact support.",
     "stockUpdateSuccess": "Stock updated",
     "stockUpdateDescription": "{{quantity}} item(s) {{action}} inventory",
