--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -65,6 +65,8 @@
     "preview": "Vista Previa",
     "searching": "Buscando...",
     "createAndStock": "Crear y Almacenar",
+    "pleaseWait": "Por favor espera...",
+    "nameRequired": "El nombre del producto es obligatorio",
     "cancel": "Cancelar",
     "saveChanges": "Guardar Cambios",
     "insufficientStock": "Stock Insuficiente",
@@ -232,7 +234,8 @@
     "productNotFound": "Producto no encontrado. Por favor, agrégalo primero al inventario.",
     "networkError": "Error de red. Verifica tu conexión e intenta de nuevo.",
     "authError": "Error de autenticación. Verifica las credenciales de la API.",
-    "validationError": "No se puede reducir el stock por debajo de cero. Ajusta la cantidad e intenta de nuevo.",
+    "validationError": "Error de Validación",
+    "stockValidationError": "No se puede reducir el stock por debajo de cero. Ajusta la cantidad e intenta de nuevo.",
     "authorizationError": "Error de autorización. Contacta a soporte.",
     "stockUpdateSuccess": "Stock actualizado",
     "stockUpdateDescription": "{{quantity}} artículo(s) {{action}} inventario",
