i18n: Add translation keys for compact filter UI
New keys added:
- inventory.searchPlaceholder, clearSearch, openFilters
- inventory.allCategories, import, export
- inventory.productsCount, productsFiltered
- inventory.sort.* (name, stock, price, category, ascending, descending)
- inventory.filters.title, description, category, stockStatus
- inventory.filters.allProducts, lowStockOnly, sortBy
- inventory.filters.clearAll, filterCount, more, actions, clearFilter

Supports new mobile filter sheet and desktop compact bar

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -185,7 +185,35 @@
     "refresh": "Refresh",
     "refreshed": "Refreshed",
     "dataRefreshed": "Inventory data refreshed",
+    "searchPlaceholder": "Search by name or barcode...",
+    "clearSearch": "Clear search",
+    "openFilters": "Open filters",
+    "allCategories": "All Categories",
+    "import": "Import",
+    "export": "Export",
+    "productsCount": "{{count}} products",
+    "productsFiltered": "{{filtered}} of {{total}}",
+    "sort": {
+      "name": "Name",
+      "stock": "Stock",
+      "price": "Price",
+      "category": "Category",
+      "ascending": "Ascending",
+      "descending": "Descending"
+    },
     "filters": {
+      "title": "Filters & Actions",
+      "description": "Filter and sort your inventory",
+      "category": "Category",
+      "stockStatus": "Stock Status",
+      "allProducts": "All Products",
+      "lowStockOnly": "Low Stock Only",
+      "sortBy": "Sort By",
+      "clearAll": "Clear All Filters",
+      "filterCount": "{{count}} filters active",
+      "more": "more",
+      "actions": "Actions",
+      "clearFilter": "Clear {{filter}} filter",
       "search": "Search products...",
       "searchPlaceholder": "Search by name or barcode...",
       "allCategories": "All Categories",
